Neue Import Funktion mit modinfo Auslesefunktion

--- a/.classpath
+++ b/.classpath
@@ -1,7 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry exported="true" kind="lib" path="src/argo-small-3.7.jar"/>
 	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry exported="true" kind="lib" path="lib/argo-small-3.14.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/gson-2.3.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/json-simple-1.1.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/simplenbt-1.0.4-SNAPSHOT.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/tablelayout.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
